1.71 Beta 3 (2013-03-20):
  Fixed issue MR-397 - Putty disappears from the screen
  Fixed issue MR-398 - Full Screen mode doesn't correctly make use of available space
  Fixed issue MR-402 - scrollbar touch moves putty window
  Fixed issue MR-406 - Items disappear from External Tools toolbar when accessing External Tools panel
  Fixed issue MR-410 - Unhandled exception when clicking New button under Theme
  Fixed issue MR-413 - Can't use aplication
  Fixed new connections having a globe icon.
  Fixed the category names in the themes tab of the options dialog on Windows XP not showing correctly.
  Fixed PuTTY saved sessions with spaces or special characters not being listed.

1.71 Beta 2 (2013-03-19):
  Added feature MR-336 - Customizable background color for the windows/panels
  Added feature MR-345 - Two separate options for confirming closure of Tabs and Connection Panels
  Added feature MR-346 - Option to show/hide the description box at the bottom of the Config panel
  Added feature MR-351 - Import connections from PuTTY
  Fixed issue MR-354 - Re-ordering tabs doesn't give good, reliable visual feedback
  Fixed issue MR-375 - Changing a connection's icon using the picture button should immediately update Icon field
  Fixed issue MR-377 - Several redundant panels can be opened
  Fixed issue MR-379 - Connection variables not working with external tools
  Fixed issue MR-381 - Notifications panel - whitespace context menu allows Copy and Delete on nothing
  Fixed issue MR-401 - Checkbox misaligned
  The username and domain settings are now hidden for VNC connections since they are not supported.
  Changed "Automatically get session information" to be disabled by default.
  RDP connections can now be switched to full screen mode when redirect key combinations is enabled.

1.71 Beta 1 (2013-03-04):
  Added feature MR-329 - Create Option to disable the "Quick: " prefix
  Fixed issue MR-67 - Sort does not recursively sort