@@ -1,3 +1,7 @@
+  Fixed an exception or crash when choosing unnamed colors for themes.
+  Fixed possible error "Control does not support transparent background colors" when modifying themes.
+  Fixed changes to the active theme not being saved reliably.
+
 1.71 Beta 3 (2013-03-20):
   Fixed issue MR-397 - Putty disappears from the screen
   Fixed issue MR-398 - Full Screen mode doesn't correctly make use of available space
